<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CreateTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingTop="0dp"
            android:text="@string/backTo"
            android:textColor="@color/green"
            android:textSize="40sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_vertical"
            android:paddingRight="40dp"
            android:paddingLeft="20dp"
            android:text="@string/add_new_task"
            android:textColor="@color/norm_black"
            android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:hint="@string/hint_test"
        android:paddingVertical="15dp"
        android:paddingStart="10dp"
        android:textColor="@color/norm_black"
        android:textColorHint="@color/norm_black" />

    <EditText
        android:id="@+id/add_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:hint="Описание"
        android:paddingVertical="15dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:textColor="@color/norm_black"
        android:textColorHint="@color/norm_black" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/green"
        android:text="@string/add_text" />

</LinearLayout>